Fixed schedule not showing on 1st load/ Fixed abstract colour on Break sessions

--- a/src/app/session/session-card/session-card.component.scss
+++ b/src/app/session/session-card/session-card.component.scss
@@ -26,7 +26,7 @@
   &.format-3 {
     // Break
     background-color: var(--ion-color-lc-blue);
-    h1, #meta #timing {
+    h1, #meta #timing, .abstract {
       color: white;
     }
   }
